crates/integration-tests/tests/fixtures/invalid/empty_macro.rs
use newtype_uuid_macros::impl_typed_uuid_kinds;

impl_typed_uuid_kinds! {}

fn main() {}
