crates/integration-tests/tests/fixtures/invalid/empty_macro.stderr
error: missing field `kinds`
 --> tests/fixtures/invalid/empty_macro.rs:3:1
  |
3 | impl_typed_uuid_kinds! {}
  | ^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `impl_typed_uuid_kinds` (in Nightly builds, run with -Z macro-backtrace for more info)
